fix: fix block paddings on mobile screen

--- a/src/components/SelectTip/SelectTip.module.css
+++ b/src/components/SelectTip/SelectTip.module.css
@@ -1,11 +1,10 @@
 .container {
     margin-top: 32px;
-    padding: 0;
+    padding: 0 33px 0 32px;
 }
 
 .content {
     margin-top: 16px;
-    padding: 0 33px 0 32px;
     display: grid;
     grid-template: 1fr 1fr 1fr / 146px 146px;
     row-gap: 16px;
